fix usage of ArrayList.getLast()